--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "^5.7.0",
+    "node-fetch": "^3.3.2",
     "vercel": "^31.0.4"
   }
 }
